--- a/env.example
+++ b/env.example
@@ -1,45 +1,40 @@
 # ── Device ──
 # Options: cpu, cuda, mps (Apple Silicon)
-# Auto-detected on macOS as mps; otherwise defaults to cpu
 DEVICE=cpu
 
-# ── Audio ──
-SAMPLE_RATE=16000
-CHUNK_MS=100
+# ── Audio (capture) ──
+CAPTURE_SAMPLE_RATE=16000
+CAPTURE_CHUNK_MS=100
 
-# ── ASR (Faster-Whisper) ──
-# Model sizes: tiny, base, small, medium, large-v2, large-v3
-# WARNING: "base" (74M params) is TOO SMALL for accurate Spanish transcription.
-# "small" (244M) minimum recommended. "medium" (769M) for better quality.
-ASR_MODEL_SIZE=small
-ASR_BUFFER_SEC=8.0
-ASR_WINDOW_SEC=8.0
-ASR_CHECK_MS=500
+# ── ASR (Qwen3-ASR) ──
+# Qwen/Qwen3-ASR-0.6B (faster) or Qwen/Qwen3-ASR-1.7B (better quality)
+ASR_MODEL=Qwen/Qwen3-ASR-0.6B
+ASR_MAX_NEW_TOKENS=256
+ASR_MAX_BATCH_SIZE=32
+WINDOW_SEC=8.0
+ASR_INTERVAL_MS=500
 
-# ── Commit Stability ──
-# K = how many consecutive stable hypotheses before committing
+# ── Commit algorithm ──
 COMMIT_STABILITY_K=3
-# Timeout: force-commit after this many seconds even if stability_k is not met
 COMMIT_TIMEOUT_SEC=2.0
-# Minimum number of words required to commit (1 allows single words like "hola")
 COMMIT_MIN_WORDS=1
 
-# ── Machine Translation ──
-# Helsinki-NLP/opus-mt-es-en (Spanish to English)
-# Helsinki-NLP/opus-mt-en-es (English to Spanish)
-# Helsinki-NLP/opus-mt-en-fr (English to French)
-# Helsinki-NLP/opus-mt-fr-en (French to English)
-MT_MODEL=Helsinki-NLP/opus-mt-es-en
+# ── Machine translation ──
+MT_MODEL_ES_EN=Helsinki-NLP/opus-mt-es-en
+MT_MODEL_EN_ES=Helsinki-NLP/opus-mt-en-es
 
-# ── TTS (Qwen3-TTS) ──
-TTS_MODEL=Qwen/Qwen3-TTS-0.6B
-# Voice mode: CustomVoice, VoiceDesign
-TTS_VOICE_MODE=CustomVoice
-TTS_VOICE_NAME=default
-TTS_CHUNK_SIZE=8000
+# ── TTS ──
+TTS_ENGINE=edge-tts
+TTS_QWEN3_MODEL=Qwen/Qwen3-TTS-0.6B
+TTS_SAMPLE_RATE=24000
 
-# ── Model Cache ──
-MODEL_CACHE_DIR=./models
+# ── Backpressure ──
+TTS_QUEUE_MAX=5
 
-# ── Logging ──
+# ── Server ──
+HOST=0.0.0.0
+PORT=8000
 LOG_LEVEL=INFO
+
+# ── Model cache ──
+MODEL_CACHE_DIR=./models
