--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,83 @@
-# Python
+# ── Environment & secrets ──
+.env
+.env.local
+.env.*.local
+*.pem
+
+# ── Python ──
 __pycache__/
 *.py[cod]
+*$py.class
+*.so
+.Python
+*.egg
 *.egg-info/
+.eggs/
 dist/
 build/
-*.egg
+*.manifest
 .venv/
 venv/
-.env
+env/
+ENV/
 
-# Node
+# ── Node ──
 node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
 frontend/dist/
 frontend/.vite/
+frontend/.cache/
 
-# Models (large files)
+# ── Models & large assets (do not commit) ──
 models/
+*.bin
+*.safetensors
+*.onnx
+_qwen3_asr_ref/
 
-# IDE
+# ── IDE & OS ──
 .vscode/
 .idea/
 *.swp
 *.swo
+*~
 .DS_Store
+Thumbs.db
 
-# Logs
+# ── Logs & temp ──
 *.log
-_qwen3_asr_ref/
+logs/
+tmp/
+temp/
+*.tmp
+*.bak
+*.tmp.*
+
+# ── Testing & coverage ──
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+.nox/
+coverage.xml
+*.cover
+.hypothesis/
+
+# ── Type checkers & linters ──
+.mypy_cache/
+.dmypy.json
+dmypy.json
+.ruff_cache/
+.pytype/
+
+# ── Jupyter ──
+.ipynb_checkpoints/
+*.ipynb
+
+# ── Local overrides ──
+.env.development
+.env.production
+local/
